26-04-2005 Qball <Qball@qballcow.nl>
	* po/ru.po:		Added russian translation. thanks to SK
25-04-2005 Qball <Qball@QballCow.nl>
	* src/libmpd.[c|h]:	Included Copyright notice in file
	* src/player.c:		Keybinding for playlist search (j)
	* src/player.c:		Keybinding for song information (i)
	* src/playlist.c:	Using gtk_window_present again, maybe solving
	thoru's focus problem.
	* playlist:		Added alt-s focus for search entry box.
	* src/playlist3.c:	Fixed keybinding when non-tree selected. (a
	signal handler got lost somewhere.)
	* src/player.c:		Player window shows song title.
	* glade/playlist3.glade:	Fixed alt-s keybinding.


17-04-2005 Qball <qball@qballcow.nl>
	* src/libmpd.c:		Update changed notification function;
	* src/playlist3.c:	making a status icon and status message on update changed.

15-04-2005 Qball <qball@qballcow.nl>
	* src/libmpd.c:		Correct parsing and tokenizing of string..
	keeping regex correct.. (respecting () and []).
	* src/playlist3.c:	Implemented xmms style playlist search with
	regex support.
	* src/libmpd.c:		Fixed disconnect segfault..

13-04-2005 Qball <qball@qballcow.nl>
	* src/playlist3.c:	Implemented xmms like search in playlist..
	(tokenized non case sens.)
	* libmpd.c:		Implemented Client side sorting of artists
	(for old mpd users.. needs testing
	* main.c:		Removed connecting before gtk_main. somehow
	this goes wrong.. (connection closed?) now after default 5 seconds
	timeout.. (needs to be chnaged)

11-04-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:	Implemented auto-scroll to playiing song.
	* src/playlist3.c:	fixed height mode implemented..  need testing.
	* src/playlist3.c:	Another memory leak or 2.
	* src/playlist3.c:	Fixed 2 memory leaks in find and file view browse
	functions.
	* src/playlist3.[c|glade]:	Implemented a database search that
	searches through all fields and tokenized. (with regex support in tokens)
	(murder|moani) John Lee  matches  John Lee hooker Murder  or John Moan
	Hooker Lee.
