@@ -1,0 +1,44 @@
+The changes for version 0.12 where:
+
+* Better, more stable connection to mpd:
+	I tried to implement this by extracting/abstracting all connectivity to mpd in libmpd.
+
+* More user feedback:
+	On error's a error window pop's up with a small error-msg.
+	Better popup code, and a new popup markup.
+
+* Faster:
+	By removing the search function from the playlist window, and therefor not using gtk_tree_model_filter anymore the speed of the playlist is 4-5 faster. (even faster when the markup is limited to a single line).
+	The Treeviews for the artist/file browser are a lazy tree. So only the absolute needed data is transfered from mpd.
+	The songs are removed from the artist/file tree and displayed in a seperate pane.
+	All these changes are implemented in a single window playlist design.
+	Tested gmpc with up to 2^16 songs in the playlist, while still being responsive.
+
+* Better support for streams: (implementation isn't overall perfect.)
+	Implemented a custom stream browser, you can save streams client side.
+	A browser for the xiph stream directory and possible others. (I will provide the top 1000 from shoutcast i.t.f.).
+	!! As a note, this need some work to get all the bug's out. !!
+
+* More flexibility.
+	Custom song formatting.. (see above)
+	Ability to disable/hide the stream browser/stream list.
+	Enable/disable popup + popup location.
+	Enable/disable tray icon. (optionall to hide the player on startup)
+	player window scales with bigger font's so it fit.
+	Tokenized search in playlist and mpd's data with regex support, allowing for very powerfull search expressions.
+
+* MPD compatibility
+	Offer options for the latest features in mpd.
+	While staying backwards compatible with earlier version.
+
+* Misc:
+	Many more keybindings.
+	Code is better readable/maintainable by abstracting different things out.
+	Reducing the amount of duplicate code.
+	Config file abstraction (in config.[c|h])
+	New config file format (xml)
+	Special care to find and fix memory leaks.
+
+* Translation
+	A new russian translation.
+	
